Add header section html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,44 @@
 
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <div class="jumbotron layer">
+            <nav class="navbar container navbar-fixed-top">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <img src="./images/ActiveBox.png" alt="">
+                    </a>
+                </div>
+                <!-- Menu elements -->
+                <div class="collapse navbar-collapse" id="menubar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#actions">actions</a></li>    <!-- #features  -->
+                        <li><a href="#projects">projects</a></li>   <!-- #works  -->
+                        <li><a href="#team">our team</a></li>       <!-- #team -->
+                        <li><a href="#reference">reference</a></li> <!-- #testimonials  -->
+                        <li><a href="#download">download</a></li>   <!-- #download  -->
+                    </ul>
+                </div>
+                <div class="bottom-line"></div>
+            </nav>
+            <div class="wrapper">
+                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.
+                </p>
+                <a href="#works" class="btn btn-danger">More about us</a>
 
+            </div>
+        </div>
+    </header>
 
     <script src="js/script.js"></script>
 </body>
