--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </div>
         </div>
     </header>
+    <section>
+
+    </section>
 
     <script src="js/script.js"></script>
 </body>
