Add actions section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header>
         <div class="jumbotron layer">
-            <nav class="navbar container navbar-fixed-top">
+            <nav class="navbar container-fluid navbar-fixed-top">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -52,8 +52,48 @@
             </div>
         </div>
     </header>
-    <section>
-
+    <!-- Section actions -->
+    <section class="container actions" id="actions">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
+                <img src="./images/monitor.png" alt="Monitor icon">
+                <h4>Mobile technology</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
+                <img src="./images/bulb.png" alt="Blub icon">
+                <h4>Innovation</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
+                <img src="./images/pencil.png" alt="Pencil and ruler icon">
+                <h4>Precise execution</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
+                <img src="./images/atom.png" alt="Atom icon">
+                <h4>New dimension</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
+                <img src="./images/briefcase.png" alt="Briefcase icon">
+                <h4>Complete project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
+                <img src="./images/cloud.png" alt="Could icon">
+                <h4>Download</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.</p>
+            </div>
+        </div>
     </section>
 
     <script src="js/script.js"></script>
