--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header>
         <div class="jumbotron layer">
-            <nav class="navbar container-fluid navbar-fixed-top">
+            <nav class="navbar container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
