Change wrapper style

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="bottom-line"></div>
             </nav>
             <div class="wrapper">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+                <h1>Lorem ipsum dolor sit amet consectetur</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.
                 </p>
