--- a/index.html
+++ b/index.html
@@ -95,6 +95,90 @@
             </div>
         </div>
     </section>
+    <section class="container-fluid gallery" id="projects">
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box>
+                <a href="#" class="gallery--project">
+                    <img src="./images/gallery_computer.jpg" alt="image" class="gallery--img">
+                    <div class="gallery--content">
+                        <h3>Project 1</h3>
+                        <p>Fusce vitae turpis</p>
+                    </div>
+
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box>
+                <a href="#" class="gallery--project">
+                    <img src="./images/gallery_intelligence.jpg" alt="image" class="gallery--img">
+                    <div class="gallery--content">
+                        <h3>Project 1</h3>
+                        <p>Fusce vitae turpis</p>
+                    </div>
+
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box>
+                <a href="#" class="gallery--project">
+                    <img src="./images/gallery_internet.jpg" alt="image" class="gallery--img">
+                    <div class="gallery--content">
+                        <h3>Project 1</h3>
+                        <p>Fusce vitae turpis</p>
+                    </div>
+
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box>
+                <a href="#" class="gallery--project">
+                    <img src="./images/gallery_multimedia.jpg" alt="image" class="gallery--img">
+                    <div class="gallery--content">
+                        <h3>Project 1</h3>
+                        <p>Fusce vitae turpis</p>
+                    </div>
+
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box>
+                <a href="#" class="gallery--project">
+                    <img src="./images/gallery_security.jpg" alt="image" class="gallery--img">
+                    <div class="gallery--content">
+                        <h3>Project 1</h3>
+                        <p>Fusce vitae turpis</p>
+                    </div>
+
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box>
+                <a href="#" class="gallery--project">
+                    <img src="./images/gallery_superhero.jpg" alt="image" class="gallery--img">
+                    <div class="gallery--content">
+                        <h3>Project 1</h3>
+                        <p>Fusce vitae turpis</p>
+                    </div>
+
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box>
+                <a href="#" class="gallery--project">
+                    <img src="./images/gallery_tablet.jpg" alt="image" class="gallery--img">
+                    <div class="gallery--content">
+                        <h3>Project 1</h3>
+                        <p>Fusce vitae turpis</p>
+                    </div>
+
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box>
+                <a href="#" class="gallery--project">
+                    <img src="./images/gallery_technology.jpg" alt="image" class="gallery--img">
+                    <div class="gallery--content">
+                        <h3>Project 1</h3>
+                        <p>Fusce vitae turpis</p>
+                    </div>
+
+                </a>
+            </div>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
