--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 
 </head>
@@ -95,6 +95,7 @@
             </div>
         </div>
     </section>
+    <!-- Section gallery -->
     <section class="container-fluid gallery" id="projects">
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
@@ -168,6 +169,65 @@
                         <p>Fusce vitae turpis</p>
                     </div>
                 </a>
+            </div>
+        </div>
+    </section>
+    <!-- Section our team -->
+    <section id="team">
+        <div class="container ourTeam">
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
+                    <img src="./images/team_golden.jpg" alt="">
+                    <h2>Tommy</h2>
+                    <h3>ceo</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
+                    <div class="ourTeam__social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
+                    <img src="./images/team_red.jpg" alt="">
+                    <h2>Mark</h2>
+                    <h3>Manager</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
+                    <div class="ourTeam__social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
+                    <img src="./images/team_wolf.jpg" alt="">
+                    <h2>Lucy</h2>
+                    <h3>hr</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
+                    <div class="ourTeam__social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
+                    <img src="./images/team_raccoon.jpg" alt="">
+                    <h2>Steven</h2>
+                    <h3>developer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
+                    <div class="ourTeam__social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
