--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <!-- Menu elements -->
                 <div class="collapse navbar-collapse" id="menubar">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#actions">actions</a></li>    <!-- #features  -->
-                        <li><a href="#projects">projects</a></li>   <!-- #works  -->
-                        <li><a href="#team">our team</a></li>       <!-- #team -->
-                        <li><a href="#reference">reference</a></li> <!-- #testimonials  -->
-                        <li><a href="#download">download</a></li>   <!-- #download  -->
+                        <li><a href="#actions">actions</a></li>
+                        <li><a href="#projects">projects</a></li>
+                        <li><a href="#team">our team</a></li>
+                        <li><a href="#reference">reference</a></li>
+                        <li><a href="#download">download</a></li>
                     </ul>
                 </div>
                 <div class="bottom-line"></div>
@@ -47,7 +47,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.
                 </p>
-                <a href="#works" class="btn btn-danger">More about us</a>
+                <a href="#projects" class="btn btn-danger">More about us</a>
 
             </div>
         </div>
@@ -63,27 +63,27 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
                 <img src="./images/bulb.png" alt="Blub icon">
-                <h4>Innovation</h2>
+                <h4>Innovation</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
                 <img src="./images/pencil.png" alt="Pencil and ruler icon">
-                <h4>Precise execution</h2>
+                <h4>Precise execution</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.</p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
                 <img src="./images/atom.png" alt="Atom icon">
-                <h4>New dimension</h2>
+                <h4>New dimension</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 actions__box">
                 <img src="./images/briefcase.png" alt="Briefcase icon">
-                <h4>Complete project</h2>
+                <h4>Complete project</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.</p>
             </div>
