--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li><a href="#actions">actions</a></li>
                         <li><a href="#projects">projects</a></li>
                         <li><a href="#team">our team</a></li>
-                        <li><a href="#reference">reference</a></li>
+                        <li><a href="#references">references</a></li>
                         <li><a href="#download">download</a></li>
                     </ul>
                 </div>
@@ -229,6 +229,58 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Section references -->
+    <section id="references" class="container-fluid clients">
+        <div id="clients" class="carousel slide" data-ride="carousel">
+            <!-- Carousel indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#clients" data-slide-to="0" class="active"></li>
+                <li data-target="#clients" data-slide-to="1"></li>
+                <li data-target="#clients" data-slide-to="2"></li>
+            </ol>
+            <!-- Slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="./images/slide_woman.jpg" alt="Amanda">
+                    <div class="carousel-caption">
+                        <span>
+                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
+                            <p>Amanda</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./images/slide_action.jpg" alt="Team">
+                    <div class="carousel-caption">
+                        <span>
+                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
+                            <p>Great Team</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./images/slide_people.jpg" alt="Friends">
+                    <div class="carousel-caption">
+                        <span>
+                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
+                            <p>Friend women</p>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <!-- Controls
+            <a class="left carousel-control" href="#clients" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#clients" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+            -->
         </div>
     </section>
 
