Add section download html and sass

--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
@@ -199,7 +198,6 @@
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
@@ -212,7 +210,6 @@
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
@@ -225,7 +222,6 @@
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -282,6 +278,12 @@
             </a>
             -->
         </div>
+    </section>
+    <!-- Section download -->
+    <section class="download" id="download">
+        <h2>Are You Ready to Start? Downolad Now For Free!</h2>
+        <p>Autem ad similique nobis blanditiis adipisci repellendus officiis.</p>
+        <a href="#" class="btn btn-danger">Download</a>
     </section>
 
     <script src="js/script.js"></script>
