Add footer html and sass

--- a/index.html
+++ b/index.html
@@ -285,6 +285,32 @@
         <p>Autem ad similique nobis blanditiis adipisci repellendus officiis.</p>
         <a href="#" class="btn btn-danger">Download</a>
     </section>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <h3>Address</h3>
+                    <p>16122 Collins Street West Victoria<br>
+                        80007 Australia</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 footer__social">
+                    <h3>Social media</h3>
+                    <i class="fab fa-facebook-f"></i></a>
+                    <i class="fab fa-linkedin-in"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <h3>About Active Box</h3>
+                    <p>Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid credits">
+            <p>Copyright &copy; 2018 Rafał Kowalczyk</p>
+        </div>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
