--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Active Page-RK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
             <nav class="navbar container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menubar" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -47,7 +47,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Totam, minima deleniti ratione reprehenderit non sapiente nostrum quo quia.
                 </p>
-                <a href="#projects" class="btn btn-danger">More about us</a>
+                <a href="#projects" class="btn btn-default">More about us</a>
 
             </div>
         </div>
@@ -242,28 +242,28 @@
                 <div class="item active">
                     <img src="./images/slide_woman.jpg" alt="Amanda">
                     <div class="carousel-caption">
-                        <span>
+                        <div>
                             <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
                             <p>Amanda</p>
-                        </span>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <img src="./images/slide_action.jpg" alt="Team">
                     <div class="carousel-caption">
-                        <span>
+                        <div>
                             <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
                             <p>Great Team</p>
-                        </span>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <img src="./images/slide_people.jpg" alt="Friends">
                     <div class="carousel-caption">
-                        <span>
+                        <div>
                             <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
                             <p>Friend women</p>
-                        </span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -283,7 +283,7 @@
     <section class="download" id="download">
         <h2>Are You Ready to Start? Downolad Now For Free!</h2>
         <p>Autem ad similique nobis blanditiis adipisci repellendus officiis.</p>
-        <a href="#" class="btn btn-danger">Download</a>
+        <a href="#" class="btn btn-default">Download</a>
     </section>
     <!-- Footer -->
     <footer>
@@ -296,10 +296,10 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 footer__social">
                     <h3>Social media</h3>
-                    <i class="fab fa-facebook-f"></i></a>
-                    <i class="fab fa-linkedin-in"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <h3>About Active Box</h3>
