--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
+    <header id="header">
         <div class="jumbotron layer">
             <nav class="navbar container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -26,7 +26,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="#header">
                         <img src="./images/ActiveBox.png" alt="">
                     </a>
                 </div>
@@ -99,7 +99,7 @@
     <section class="container-fluid gallery" id="projects">
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
-                <a href="#" class="gallery--project">
+                <a href="#header" class="gallery--project">
                     <img src="./images/gallery_computer.jpg" alt="image" class="gallery--img">
                     <div class="gallery--content">
                         <h3>Project 1</h3>
@@ -108,7 +108,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
-                <a href="#" class="gallery--project">
+                <a href="#header" class="gallery--project">
                     <img src="./images/gallery_intelligence.jpg" alt="image" class="gallery--img">
                     <div class="gallery--content">
                         <h3>Project 2</h3>
@@ -117,7 +117,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
-                <a href="#" class="gallery--project">
+                <a href="#header" class="gallery--project">
                     <img src="./images/gallery_internet.jpg" alt="image" class="gallery--img">
                     <div class="gallery--content">
                         <h3>Project 3</h3>
@@ -126,7 +126,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
-                <a href="#" class="gallery--project">
+                <a href="#header" class="gallery--project">
                     <img src="./images/gallery_multimedia.jpg" alt="image" class="gallery--img">
                     <div class="gallery--content">
                         <h3>Project 4</h3>
@@ -135,7 +135,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
-                <a href="#" class="gallery--project">
+                <a href="#header" class="gallery--project">
                     <img src="./images/gallery_tablet.jpg" alt="image" class="gallery--img">
                     <div class="gallery--content">
                         <h3>Project 5</h3>
@@ -144,7 +144,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
-                <a href="#" class="gallery--project">
+                <a href="#header" class="gallery--project">
                     <img src="./images/gallery_superhero.jpg" alt="image" class="gallery--img">
                     <div class="gallery--content">
                         <h3>Project 6</h3>
@@ -153,7 +153,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
-                <a href="#" class="gallery--project">
+                <a href="#header" class="gallery--project">
                     <img src="./images/gallery_security.jpg" alt="image" class="gallery--img">
                     <div class="gallery--content">
                         <h3>Project 7</h3>
@@ -162,7 +162,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 gallery__box">
-                <a href="#" class="gallery--project">
+                <a href="#header" class="gallery--project">
                     <img src="./images/gallery_technology.jpg" alt="image" class="gallery--img">
                     <div class="gallery--content">
                         <h3>Project 8</h3>
@@ -182,10 +182,10 @@
                     <h3>ceo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
                     <div class="ourTeam__social">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#header"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#header"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#header"><i class="fab fa-twitter"></i></a>
+                        <a href="#header"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
@@ -194,10 +194,10 @@
                     <h3>Manager</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
                     <div class="ourTeam__social">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#header"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#header"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#header"><i class="fab fa-twitter"></i></a>
+                        <a href="#header"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
@@ -206,10 +206,10 @@
                     <h3>hr</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
                     <div class="ourTeam__social">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#headerheader"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#headerheader"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#headerheader"><i class="fab fa-twitter"></i></a>
+                        <a href="#headerheader"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ourTeam__box">
@@ -218,10 +218,10 @@
                     <h3>developer</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
                     <div class="ourTeam__social">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#header"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#header"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#header"><i class="fab fa-twitter"></i></a>
+                        <a href="#header"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Controls
+            <!-- Controls -->
             <a class="left carousel-control" href="#clients" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -276,14 +276,14 @@
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-            -->
+
         </div>
     </section>
     <!-- Section download -->
     <section class="download" id="download">
         <h2>Are You Ready to Start? Downolad Now For Free!</h2>
         <p>Autem ad similique nobis blanditiis adipisci repellendus officiis.</p>
-        <a href="#" class="btn btn-default">Download</a>
+        <a href="#header" class="btn btn-default">Download</a>
     </section>
     <!-- Footer -->
     <footer>
@@ -296,10 +296,10 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 footer__social">
                     <h3>Social media</h3>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#header"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#header"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#header"><i class="fab fa-twitter"></i></a>
+                    <a href="#header"><i class="fab fa-instagram"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <h3>About Active Box</h3>
@@ -312,6 +312,6 @@
         </div>
     </footer>
 
-    <!-- <script src="js/script.js"></script> -->
+    <script src="js/script.js"></script>
 </body>
 </html>
