Add beautify file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 
 </head>
+
 <body>
     <!-- Header -->
     <header id="header">
@@ -20,7 +25,8 @@
             <nav class="navbar container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menubar" aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menubar"
+                        aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -180,7 +186,8 @@
                     <img src="./images/team_golden.jpg" alt="">
                     <h2>Tommy</h2>
                     <h3>ceo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias
+                        beatae perf</p>
                     <div class="ourTeam__social">
                         <a href="#header"><i class="fab fa-facebook-f"></i></a>
                         <a href="#header"><i class="fab fa-linkedin-in"></i></a>
@@ -192,7 +199,8 @@
                     <img src="./images/team_red.jpg" alt="">
                     <h2>Mark</h2>
                     <h3>Manager</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias
+                        beatae perf</p>
                     <div class="ourTeam__social">
                         <a href="#header"><i class="fab fa-facebook-f"></i></a>
                         <a href="#header"><i class="fab fa-linkedin-in"></i></a>
@@ -204,7 +212,8 @@
                     <img src="./images/team_wolf.jpg" alt="">
                     <h2>Lucy</h2>
                     <h3>hr</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias
+                        beatae perf</p>
                     <div class="ourTeam__social">
                         <a href="#headerheader"><i class="fab fa-facebook-f"></i></a>
                         <a href="#headerheader"><i class="fab fa-linkedin-in"></i></a>
@@ -216,7 +225,8 @@
                     <img src="./images/team_raccoon.jpg" alt="">
                     <h2>Steven</h2>
                     <h3>developer</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias beatae perf</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nostrum possimus nihil alias
+                        beatae perf</p>
                     <div class="ourTeam__social">
                         <a href="#header"><i class="fab fa-facebook-f"></i></a>
                         <a href="#header"><i class="fab fa-linkedin-in"></i></a>
@@ -243,7 +253,8 @@
                     <img src="./images/slide_woman.jpg" alt="Amanda">
                     <div class="carousel-caption">
                         <div>
-                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
+                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum,
+                                blanditiis.</q>
                             <p>Amanda</p>
                         </div>
                     </div>
@@ -252,7 +263,8 @@
                     <img src="./images/slide_action.jpg" alt="Team">
                     <div class="carousel-caption">
                         <div>
-                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
+                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum,
+                                blanditiis.</q>
                             <p>Great Team</p>
                         </div>
                     </div>
@@ -261,7 +273,8 @@
                     <img src="./images/slide_people.jpg" alt="Friends">
                     <div class="carousel-caption">
                         <div>
-                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum, blanditiis.</q>
+                            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis natus dolorum,
+                                blanditiis.</q>
                             <p>Friend women</p>
                         </div>
                     </div>
@@ -314,4 +327,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
