--- a/index.html
+++ b/index.html
@@ -289,7 +289,6 @@
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-
         </div>
     </section>
     <!-- Section download -->
@@ -299,7 +298,10 @@
         <a href="#header" class="btn btn-default">Download</a>
     </section>
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
+        <div id="slideUp">
+            <a href="#header"><i class="fas fa-angle-double-up fa-3x"></i></a>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
