--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
     <!-- Header -->
     <header id="header">
         <div class="jumbotron layer">
-            <nav class="navbar container-fluid">
+            <nav class="navbar container-fluid navbar-fixed-top">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menubar"
-                        aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menubar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#header">
-                        <img src="./images/ActiveBox.png" alt="">
+                        <img src="./images/ActiveBox.png" alt="ActiveBox">
                     </a>
                 </div>
                 <!-- Menu elements -->
@@ -300,7 +299,7 @@
     <!-- Footer -->
     <footer id="footer">
         <div id="slideUp">
-            <a href="#header"><i class="fas fa-angle-double-up fa-3x"></i></a>
+            <a href="#header"><i class="fas fa-angle-double-up"></i></a>
         </div>
         <div class="container">
             <div class="row">
